--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
             <div class="mb-5 landing-info-wrapper d-none-780-up">
                     <div class="landing-info d-flex flex-row justify-content-evenly align-items-center">
                         <div class="p-3 info-icon">
-                            <i class="fas fa-scroll fa-3x text-muted"></i>
+                            <i class="far fa-copy fa-3x text-muted"></i>
                         </div>
                         <div>
                             <p class="info-main">1 500+ opakovacích kartiček</p>
@@ -83,7 +83,7 @@
                         <div class="landing-info col-md-3 offset-md-2">
                             <div class="row my-2">
                                 <div class="info-icon col-3 d-flex justify-content-center align-items-center">
-                                    <i class="fas fa-scroll fa-3x text-muted"></i>
+                                    <i class="far fa-copy fa-3x text-muted"></i>
                                 </div>
                                 <div class="col-9">
                                     <p class="info-main">1 500+ opakovacích kartiček</p>
@@ -119,7 +119,7 @@
             <div class="row">
                 <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/trestnipravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_tresthmota.png" class="img-fit" alt="" />
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/trestniproces" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_trestproces.png" class="img-fit" alt="" />
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/obcanskepravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_civilhmota.png" class="img-fit" alt="" />
@@ -167,7 +167,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/civilniproces" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_civilproces.png" class="img-fit" alt="" />
@@ -186,7 +186,7 @@
             <div class="row mt-lg-4">
                 <div class="offset-lg-2 col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/spravnipravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_sprava.png" class="img-fit" alt="" />
@@ -202,7 +202,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/ustavnipravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_ustavko.png" class="img-fit" alt="" />
@@ -218,7 +218,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/obchodnipravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_obchod.png" class="img-fit" alt="" />
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-2 col-md-3 col-6 mb-4">
                     <a href="/category/mezinarodnipravo" class="landing-link">
-                        <div class="card shadow">
+                        <div class="card  ">
                             <div class="d-flex justify-content-center">
                                 <div class="m-3 rounded-circle icon-background-landing d-flex justify-content-center align-items-center">
                                     <img src="/img/icon_mezinarodko.png" class="img-fit" alt="" />
