--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -25,7 +25,7 @@
 
     gtag('config', 'G-NNQ2L4K9C9');
     </script>
-<body class="d-flex flex-column vh-100 bg-light">
+<body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %> 
     <main class="container mt-5">
         <%- include('../partials/alert') %>
