--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-light py-3 mt-auto nezobrazovat-na-mobilu">
+<footer class="footer bg-white py-3 mt-auto nezobrazovat-na-mobilu">
     <div class="container text-muted">
         <div class="d-flex flex-sm-row flex-column justify-content-between text-small">
             <div class="mx-2 nezobrazovat-na-mobilu-landing">
