--- a/views/sections/edit.ejs
+++ b/views/sections/edit.ejs
@@ -1,7 +1,7 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
     <div class="col-lg-6 offset-lg-3">
         <h1>Upravit sekci</h1> 
-
+        <p>ID sekce: <%= section._id %></p>
         <form class="row g-3 needs-validation mt-3" novalidate action="/category/<%= section.category %>/editSection/<%=section._id%>?_method=PUT" method="POST">
             <div class="mt-2">
                 <label for="name" class="form-label">Název</label>
@@ -13,6 +13,10 @@
             <div class="mt-2">
                 <label for="desc" class="form-label">Popis</label>
                 <input type="text" name="desc" id="desc" class="form-control" value="<%= section.shortDescription %>"></input>
+            </div>
+            <div class="mt-2">
+                <label for="next" class="form-label">ID navazující sekce</label>
+                <input type="text" name="next" id="next" class="form-control" value="<%= section.nextSection %>"></input>
             </div>
             <div class="col-12">
                 <button class="btn btn-danger btn-sm" type="submit">Uložit</button>
