--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -24,6 +24,13 @@
                     </div>
                     <hr />
                     <div class="col-4 fw-bold">
+                        <p>Fakulta</p>
+                    </div>
+                    <div class="col-8">
+                        <%= user.faculty %> 
+                    </div>
+                    <hr />
+                    <div class="col-4 fw-bold">
                         <p>Počet nastudovaných kartiček</p>
                     </div>
                     <div class="col-8">
