--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
                             <i class="far fa-copy fa-3x text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">1 500+ opakovacích kartiček</p>
+                            <p class="info-main"><%= numOfCards %> opakovacích kartiček</p>
                             <p class="info-secondary text-muted">a přibývají</p>
                         </div>
                     </div>
@@ -72,8 +72,8 @@
                             <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
                         </div>
                         <div>
-                            <p class="info-main">8 právních oblastí </p>
-                            <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
+                            <p class="info-main"><%= numOfCategories %> právních oblastí </p>
+                            <p class="info-secondary text-muted">obsahujících <%= numOfSections  %> balíčků</p>
                         </div>
                     </div>
             </div>
@@ -87,7 +87,7 @@
                                     <i class="far fa-copy fa-3x text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">1 500+ opakovacích kartiček</p>
+                                    <p class="info-main"><%= numOfCards %> opakovacích kartiček</p>
                                     <p class="info-secondary text-muted">a přibývají</p>
                                 </div>
                             </div>
@@ -109,8 +109,8 @@
                                     <i class="fas fa-gavel fa-3x color-2 text-muted"></i>
                                 </div>
                                 <div class="col-9">
-                                    <p class="info-main">8 právních oblastí </p>
-                                    <p class="info-secondary text-muted">obsahujících 68 balíčků</p>
+                                    <p class="info-main"><%= numOfCategories %> právních oblastí </p>
+                                    <p class="info-secondary text-muted">obsahujících <%= numOfSections  %> balíčků</p>
                                 </div>
                             </div>
                         </div>
