--- a/views/payments/failed.ejs
+++ b/views/payments/failed.ejs
@@ -2,9 +2,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
-            <div class="card shadow text-center p-4">
-                <h3 class="mt-4">Platba se nezdařila :/</h3>
-                <h6 class="my-4">Omlouváme se, zkuste to prosím znovu</h6>
+            <div class="card text-center p-4">
+                <h3>Platba se nezdařila</h3>
+                <p class="my-4"><i class="far fa-times-circle green-check"></i></p>
+                <h5 class="my-4">Omlouváme se, zkus to prosím ještě jednou</h5>
+                <div class="d-flex justify-content-center mt-3">
+                    <a href="/premium" class="btn btn-lg btn-danger w-50">Zkusit znovu</a>
+                </div>
             </div>
         </div>
     </div>
