--- a/views/payments/success.ejs
+++ b/views/payments/success.ejs
@@ -2,13 +2,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-12 offset-md-3">
-            <div class="card shadow text-center p-4">
-                <h3>Zaplaceno</h3>
-                <p class="my-4"><i class="far fa-check-circle fa-3x color-1"></i></p>
-                <h6>Děkujeme!</h6>
-                <p class="mt-3">Nyní můžete využít výhod InLege Premium naplno!</p>
+            <div class="card text-center p-4">
+                <h3>Předplatné aktivováno</h3>
+                <p class="my-4"><i class="fas fa-check-circle green-check"></i></p>
+                <h5>Děkujeme!</h5>
+                <p class="mt-3">Nyní můžeš využívat výhod <span class="color-1" style="font-weight: bold;">InLege</span> naplno!</p>
                 <div class="d-flex justify-content-center mt-3">
-                    <a href="/" class="btn btn-sm btn-danger w-50">Pustit se do studia</a>
+                    <a href="/" class="btn btn-lg btn-danger w-50">Jdeme na to!</a>
                 </div>
             </div>
         </div>
