--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -77,6 +77,11 @@
 }
 
 /* LOGIN / REGISTRATION */
+.label-register,
+.label-login {
+    margin-bottom: 0;
+    font-size: 0.9rem;
+}
 
 
 /* PROFILE - PREMIUM OFFERS*/
@@ -245,6 +250,11 @@
 
 .nav-item-saved-cards {
     text-align: center;
+}
+
+/* SHOW ALL USERS*/
+.stats p {
+    margin-bottom: 5px;
 }
 
 /* FOOTER */
