--- a/views/auth/login_form.ejs
+++ b/views/auth/login_form.ejs
@@ -1,23 +1,21 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container forms-background d-flex justify-content-center align-items-center mt-1 mb-5">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="d-flex justify-content-center align-items-center" style="max-width:330px;">
             <div class="card shadow">
                 <div class="card-body">
                     <div class="text-center">
-                        <h4 class="mb-3 mt-2">Přihlášení</h4>
+                        <h3 class="mb-3 mt-2">Přihlášení</h3>
                     </div>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/login" method="POST">
                         <div class="mt-1">
-                        <label for="email" class="form-label">E-mail</label>
-                            <input type="email" class="form-control form-control-sm" id="username" name="username" autofocus required>
+                            <input type="email" class="form-control form-control-sm" id="username" name="username" placeholder="E-mail" autofocus required>
                         </div>
                         <div class="mt-3">
-                            <label for="password" class="form-label">Heslo</label>
-                            <input type="password" class="form-control form-control-sm" id="password" name="password" required>
+                            <input type="password" class="form-control form-control-sm" id="password" name="password" placeholder="Heslo" required>
                         </div>
                         <div class="">
-                            <button class="btn btn-danger w-100 mt-3" type="submit">Přihlásit se</button>
+                            <button class="btn btn-danger btn-lg w-100 mt-3" type="submit">Přihlásit se</button>
                         </div>
                         <div class="text-center">
                             <a href="/auth/user/requestPassword" class="text-muted"><small>Zapomenuté heslo</small></a>
