--- a/views/auth/register_form.ejs
+++ b/views/auth/register_form.ejs
@@ -1,11 +1,11 @@
 <% layout ('layouts/boilerplate.ejs')  %> 
 <div class="container d-flex justify-content-center align-items-center mt-1 mb-5">
     <div class="row">
-        <div class="col-md-4 offset-md-4">
+        <div class="d-flex justify-content-center align-items-center" style="max-width:330px;">
             <div class="card shadow">
                 <div class="card-body">
                 <div class="text-center">
-                    <h4 class="mb-3 mt-2">Registrace</h4>
+                    <h3 class="mb-3 mt-2">Registrace</h3>
                 </div>
                 <% if (requiresPremium) { %>
                     <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new?requiresPremium=true" method="POST">
@@ -13,31 +13,39 @@
                 <form class="row g-3 needs-validation mt-1" novalidate action="/auth/user/new" method="POST">
                 <% } %> 
                     <div class="mt-2">
-                        <label for="firstname" class="form-label">Jméno</label>
-                            <input type="text" class="form-control form-control-sm" id="firstname" name="firstname" required>
+                        <input type="text" class="form-control form-control-sm" id="firstname" name="firstname" placeholder="Jméno" required>
                     </div>
                     <div class="mt-3">
-                        <label for="lastname" class="form-label">Příjmení</label>
-                            <input type="text" class="form-control form-control-sm" id="lastname" name="lastname" required>
+                        <input type="text" class="form-control form-control-sm" id="lastname" name="lastname" placeholder="Příjmení" required>
                     </div>
                     <div class="mt-3">
-                    <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control form-control-sm" id="email" name="email" required>
+                        <input type="email" class="form-control form-control-sm" id="email" name="email" placeholder="E-mail" required>
                     </div>
                     <div class="mt-3">
-                        <label for="password" class="form-label">Heslo</label>
-                        <input type="password" class="form-control form-control-sm" id="password" name="password" minlength=6 required>
+                        <input type="password" class="form-control form-control-sm" id="password" name="password" placeholder="Heslo" minlength=6 required>
                         <div class="invalid-feedback">
                             Heslo musí obsahovat nejméně 6 znaků.
                         </div>
                     </div>
                     <div class="mt-3">
-                        <label for="password_confirmation" class="form-label">Heslo znovu</label>
-                        <input type="password" class="form-control form-control-sm" id="password_confirmation" name="password_confirmation" minlength=6 required>
+                        <input type="password" class="form-control form-control-sm" id="password_confirmation" name="password_confirmation" placeholder="Heslo pro kontrolu" minlength=6 required>
                         <div class="invalid-feedback">
                             Heslo musí obsahovat nejméně 6 znaků.
                         </div>
                     </div>
+                    <div>
+                        <select class="form-select form-select-sm" name="faculty" id="faculty">
+                            <option selected value="Neuvedeno">Zvolte fakultu (nepovinné)</option>
+                            <option value="PrF UP">PrF UP</option>
+                            <option value="PrF UK">PrF UK</option>
+                            <option value="PrF MUNI">PrF MUNI</option>
+                            <option value="PrF ZČU">PrF ZČU</option>
+                            <option value="Jiná">Jiná</option>
+                            <option value="Nestuduji">Již nestuduji</option>
+                          </select>
+                    </div>
+
+
                     <div class="mt-3">
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="vop" id="vop" required>
@@ -56,7 +64,7 @@
                     </div>
                     
                     <div>
-                    <button class="btn btn-danger w-100 mt-3" type="submit">Zaregistrovat</button>
+                    <button class="btn btn-lg btn-danger w-100 mt-3" type="submit">Zaregistrovat</button>
                     </div>
                 </form>
             </div>
