--- a/views/sections/finishedLive.ejs
+++ b/views/sections/finishedLive.ejs
@@ -25,11 +25,12 @@
                 <% if (nextSection.name === "lastSection") { %>
                     <div class="row">
                         <div class="col-12 mb-2">
-                            <h6 class="mb-0 mt-2">Tohle byl poslední balíček <br>v této kategorii.</h6> 
+                            <h5 class="mb-0 mt-2">Tohle byl poslední balíček <br>v této kategorii.</h5> 
                         </div>
                     </div>
                     <div class="row mt-3">
                         <div class="col-12">
+                            <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                             <a href="/category/<%= category%>/" class="btn btn-lg btn-danger mb-4">Zpět na kategorii</a>
                         </div>
                     </div>
@@ -37,7 +38,7 @@
                 <% } else { %>
                     <div class="row">
                         <div class="col-12">
-                            <h6 class="mb-0 mt-2"><b>Navazující balíček</b></h6> 
+                            <h5 class="mb-1 mt-3">Navazující balíček</h5> 
                             <p><%= nextSection.name %></p>
                         </div>
                     </div>
@@ -47,9 +48,10 @@
                                 <div class="d-flex justify-content-center align-items-center">
                                     <p class="mb-4 grey-highlight px-3 py-2">Navazující balíček je přístupný jen <br>s <b>předplatným Premium</b>.</p>
                                 </div>
-                                
+                                <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/premium" class="btn btn-lg btn-danger mb-4">Zjistit více</a>
                             <% } else { %>
+                                <a href="/category/<%= category%>/section/<%= section._id%>/repeatSection" class="btn btn-lg btn-danger mb-4"><i class="fas fa-redo"></i></a>
                                 <a href="/category/<%= category%>/section/<%= section.nextSection%>/1" class="btn btn-lg btn-danger mb-4">Pokračovat na další balíček</a>
                             <% } %>
                         </div>
