--- a/views/index.ejs
+++ b/views/index.ejs
@@ -73,7 +73,7 @@
                         </div>
                         <div>
                             <p class="info-main"><%= numOfCategories %> právních oblastí </p>
-                            <p class="info-secondary text-muted">obsahujících <%= numOfSections  %> balíčků</p>
+                            <p class="info-secondary text-muted">rozdělených do <%= numOfSections  %> balíčků</p>
                         </div>
                     </div>
             </div>
