--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -124,6 +124,11 @@
     color: #6C657D
 }
 
+.spinner-border-small {
+    height: 20px;
+    width: 20px;
+ }
+
 /* PROFILE */
 .profile-card {
     font-size: smaller; 
